[gd_scene load_steps=4 format=3 uid="uid://bydd3xjp1lnup"]

[ext_resource type="Script" path="res://scripts/window.gd" id="1_o1yg3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xjptm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xbs6o"]
bg_color = Color(1, 1, 1, 1)

[node name="Window" type="Panel"]
offset_right = 832.0
offset_bottom = 448.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o1yg3")

[node name="TitleBar" type="Control" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.099
offset_bottom = -0.152008
grow_horizontal = 2

[node name="Panel" type="Panel" parent="TitleBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xjptm")

[node name="Title" type="Label" parent="TitleBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_bottom = -0.199997
grow_horizontal = 2
grow_vertical = 2
text = "新面板"
vertical_alignment = 1

[node name="CountdownLabel" type="Label" parent="TitleBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_right = -45.0
offset_bottom = -0.199993
grow_horizontal = 2
grow_vertical = 2
text = "。"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CloseBtn" type="Button" parent="TitleBar"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_bottom = -0.199993
grow_horizontal = 0
grow_vertical = 2

[node name="Content" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.098
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.0959969
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xbs6o")

[connection signal="pressed" from="TitleBar/CloseBtn" to="." method="_on_close_btn_pressed"]
